--- a/METEOR/client/main.css
+++ b/METEOR/client/main.css
@@ -1,1 +1,11 @@
 /* CSS declarations go here */
+body{
+	padding: 0;
+	margin: 0;
+	background: gray;
+}
+
+#phaser-example{
+	width: 100%;
+	height: 100%;
+}
